# CodexTest

./: CMakeLists.txt  README.md
cmake/Toolchains/: mingw-clang-libcxx.cmake
include/engine/: Application.hpp  Camera.hpp  Engine.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Vertex.hpp  Window.hpp
shaders/: blinn_phong.frag  blinn_phong.vert
src/client/: main.cpp
src/engine/: Application.cpp  Camera.cpp  Engine.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Window.cpp
